--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,17 +4,200 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <style>
-    .wrapper {
 
-    }
-  </style>
 </head>
+
 <body>
 <main>
   <div class="wrapper">
     <!-- CardsList component -->
+    <div class="row">
+      <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+        <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+          <div class="product-image"
+            style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+          <div class="product-description">
+            <div class="product-price-wrapper">
+              <div class="product-rating">
+                <span>1.23</span>
+                <i class="fa fa-star-o"></i>
+              </div>
+              <div class="product-price">15999</div>
+            </div>
+            <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+            <p class="product-kind">laptops</p>
+          </div>
+          <footer class="product-footer" href="#">
+            <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+          </footer>
+        </div>
+      <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+            <!-- <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4"> -->
+              <div class="product-card col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                <div class="product-image"
+                  style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+                <div class="product-description">
+                  <div class="product-price-wrapper">
+                    <div class="product-rating">
+                      <span>1.23</span>
+                      <i class="fa fa-star-o"></i>
+                    </div>
+                    <div class="product-price">15999</div>
+                  </div>
+                  <p class="product-name">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+                  <p class="product-kind">laptops</p>
+                </div>
+                <footer class="product-footer" href="#">
+                  <button type="button" class="btn-primary" href="#">ADD TO CART</button>
+                </footer>
+              </div>
+            <!-- </div> -->
+    </div>
   </div>
 </main>
 </body>
