--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,95 @@
-/* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
+
+body,
+html {
+  background: grey;
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.modal-window {
+  width: 90%;
+  min-height: 300px;
+  margin: 100px auto;
+  background-color: #fff;
+}
+
+.modal-header {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  position: relative;
+
+}
+
+.btn-close {
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+}
+
+.cart-content {
+  padding: 10px;
+  min-height: 100px;
+
+}
+
+.product {
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+  padding: 15px 25px;
+}
+
+.product img {
+  max-height: 40px;
+  margin-right: 25px;
+
+}
+
+.product-counter {
+ width: 110px;
+  margin: 0 15px;
+}
+
+.add-product,
+.delit-product {
+  border: none;
+  background-color: #fff;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.modal-footer h5 {
+  display: inline;
+
+}
+.btn-order {
+  width: 200px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 11px;
+  background: #7E72F2;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  cursor: pointer;
+  user-select: none;
+
+}
