--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -3,6 +3,7 @@ body, html{
 }
 p, h5{
   margin: 0px;
+  font-weight: 100;
 }
 ul,
 li {
@@ -14,3 +15,5 @@ li {
 a {
   text-decoration: none;
 }
+
+
