added side-bar component

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -18,7 +18,7 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
-    <div class="search-component">
+    <div class="search-box">
       <input type="Search" class="search-input" placeholder="Search">
       <label class="bi bi-search search-icon" for="search-input"></label>
     </div>
