--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>SideBar component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
   <style>
     .wrapper {
@@ -16,6 +19,116 @@
 <main>
   <div class="wrapper">
     <!-- SideBar component -->
+    <div class="side-bar-container">
+      <div class="side-bar">
+        <div class="price-slider">
+          <h3 class="side-bar-heading">Price</h3>
+          <div class="range-slider">
+            <span>0UAH</span>
+            <span>85000UAH</span>
+          </div>
+        </div>
+        <div class="side-bar-section">
+          <h3 class="side-bar-heading">Category</h3>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Monitors</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Laptops</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox" class="side-bar-checkbox">
+            <label for="checkbox">Video cards</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox" class="side-bar-checkbox">
+            <label for="checkbox">Gaming keyboards</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox" class="side-bar-checkbox">
+            <label for="checkbox">Computer mouse</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox" class="side-bar-checkbox">
+            <label for="checkbox">SSD</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox" class="side-bar-checkbox">
+            <label for="checkbox">Sound cards</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox" class="side-bar-checkbox">
+            <label for="checkbox">RAM</label>
+          </div>
+        </div>
+        <div class="side-bar-section">
+          <h3 class="side-bar-heading">Brand</h3>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Asus</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Acer</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Apple</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Dell</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Dynamode</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Gigabyte</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Kingston</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Lenovo</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">Logitech</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">MSI</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">BenQ</label>
+          </div>
+          <div class="side-bar-filters">
+            <input type="checkbox">
+            <label for="checkbox">A4Tech</label>
+          </div>
+        </div>
+        <div class="rating-slider">
+          <h3 class="side-bar-heading">Rating</h3>
+          <div class="range-slider">
+            <span>0</span>
+            <span>5</span>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="clear-button-container">
+        <button class="clear-filers-button">Clear All Filters</button>
+      </div>
+    </div>
+
+
   </div>
 </main>
 </body>
