--- a/src/components/side-bar/01-css-task/style.css
+++ b/src/components/side-bar/01-css-task/style.css
@@ -1,1 +1,87 @@
 /* put your styles in this file */
+
+:root {
+  --white: #FFFFFF;
+  --purple: #7E72F2;
+  --black: #000000;
+  --gray-200: #979797;
+  --gray-100: #D6D6D6;
+}
+
+.side-bar {
+  width: 280px;
+  height: 904px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
+  padding: 25px 22px;
+}
+
+.side-bar-section {
+  border-bottom: 1px solid var(--gray-100);
+  padding-bottom: 20px;
+}
+
+.side-bar-heading {
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+/* Checkbox filters styling */
+.side-bar-filters {
+  display: flex;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 5px;
+}
+
+.side-bar-filters input{
+  appearance: none;
+  width: 20px;
+  height: 17px;
+  border: 1px solid var(--gray-200);
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  margin-right: 10px
+}
+
+.side-bar-filters input:checked {
+  background-color: var(--purple);
+  border-color: var(--purple);
+}
+
+.side-bar-filters input:checked::after {
+  content: "✓";
+  color: var(--white);
+}
+
+/* Slider filter styling */
+
+.range-slider {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 11px;
+}
+
+
+/* Clear All Filters button */
+
+.clear-button-container {
+  margin-top: 20px;
+}
+
+.clear-filers-button {
+  width: 280px;
+  height: 46px;
+  border: none;
+  background-color: var(--purple);
+  font-family: 'Montserrat', sans-serif;
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 400;
+  border-radius: 8px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
