--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <Link rel="stylesheet" href="css/style.css"></Link>
-    <title>online-store (Leptop) </title>
+    <link rel="stylesheet" href="/css/style.css">
+
+    <title>Card</title>
 </head>
 <body>
-  <div class="cart">
-      <div class="block">
-         <img src="img/photo 1.jpg" alt="#" >
-          <div class="item">
-              <div class="btn1-block">
-               <button class="btn1">1.23 <img class="star" src="/components/card/img/Star 1.svg" alt="">  </button>
-             </div>
-          <div class="price">15999 </div>
-       </div>
-         <p> Ноутбук Acer Aspire <span> 3 A315-57G-336G (NX.HZREU.01S)</span> Charcoal Black </p>
-         <h5>laptops </h5>
-        <button class="btn">Add To Cart</button>
+  <div class="wrapper">
+    <article class="product">
+      <div class="product-image">
+        <img src="img/photo1.jpg"  alt="photo">
+        </div>
+      <div class="rating-price">
+         <div class="rating">
+            <button class="btn-f">0,53
+                <img src="/img/Star 2 (Stroke).svg" alt="photo">
+            </button>
+         </div>
+         <div class="price">15999</div>
       </div>
-
+      <h5 class="card-list">Ноутбук Acer Aspire 3 A315-57G-336G <br>
+          (NX.HZREU.01S) Charcoal Black</h5>
+      <p class="card-line">laptops</p>
+      <button class="btn-card">ADD TO CART</button>
+    </article>
   </div>
+
+
+
+
 </body>
 </html>
