card-list is ready

--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
-
   <style>
     .wrapper {
-
+      width: 1020px;
+      margin: 0 auto;
     }
   </style>
 </head>
@@ -15,6 +15,62 @@
 <main>
   <div class="wrapper">
     <!-- CardsList component -->
+    <div class="card-list">
+      <div class="card">
+        <img class="card-img" src="laptop.png" alt="Leptop">
+        <div class="card-header">
+            <div class="card-header-rating">1.23</div>
+            <div class="card-header-price">15999</div>
+        </div>
+        <p>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+        <a href="#" class="card-category">laptops</a>
+        <a href="#" class="card-buy">Add To Cart</a>
+      </div>
+
+      <div class="card">
+        <img class="card-img" src="laptop.png" alt="Leptop">
+        <div class="card-header">
+            <div class="card-header-rating">1.96</div>
+            <div class="card-header-price">21500</div>
+        </div>
+        <p>Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</p>
+        <a href="#" class="card-category">laptops</a>
+        <a href="#" class="card-buy">Add To Cart</a>
+      </div>
+
+      <div class="card">
+        <img class="card-img" src="laptop.png" alt="Leptop">
+        <div class="card-header">
+            <div class="card-header-rating">2.42</div>
+            <div class="card-header-price">22999</div>
+        </div>
+        <p>Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</p>
+        <a href="#" class="card-category">laptops</a>
+        <a href="#" class="card-buy">Add To Cart</a>
+      </div>
+
+      <div class="card">
+        <img class="card-img" src="laptop.png" alt="Leptop">
+        <div class="card-header">
+            <div class="card-header-rating">0.53</div>
+            <div class="card-header-price">28999</div>
+        </div>
+        <p>Ноутбук Acer Nitro 5 AN515-55-56WH (NH.Q7PEU.00L) Obsidian Black Суперцена!!!</p>
+        <a href="#" class="card-category">laptops</a>
+        <a href="#" class="card-buy">Add To Cart</a>
+      </div>
+
+      <div class="card">
+        <img class="card-img" src="laptop.png" alt="Leptop">
+        <div class="card-header">
+            <div class="card-header-rating">3.2</div>
+            <div class="card-header-price">22500</div>
+        </div>
+        <p>Ноутбук Acer Aspire 7 A715-75G-57LR (NH.Q87EU.006) Charcoal Black</p>
+        <a href="#" class="card-category">laptops</a>
+        <a href="#" class="card-buy">Add To Cart</a>
+      </div>
+    </div>
   </div>
 </main>
 </body>
