--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,85 @@
-/* put your styles in this file */
+.wrapper {
+  width: 400px;
+  margin: 100px auto;
+}
+
+.os-product-card {
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, .135216);
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.os-product-img {
+  display: flex;
+  height: 200px;
+  justify-content: center;
+  margin: 12px 12px 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.os-product-content {
+  padding: 22px 24px;
+}
+
+.os-product-price-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.os-product-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex: 1;
+  max-width: 70px;
+  padding: 6px 12px;
+  border-radius: 3px;
+  background-color: #7e72f2;
+  color: rgba(255, 255, 255, 1);
+  font-family: 'Montserrat', sans-serif;
+  font-size: .875rem;
+  font-weight: 400;
+}
+
+.os-product-price {
+  color: #2c2c2c;
+  font-size: 1.125rem;
+  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.os-product-title,
+.os-product-description {
+  margin: 0;
+  font-weight: normal;
+  color: #2c2c2c;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.os-product-title {
+  font-size: 1rem;
+  margin-bottom: 8px
+}
+
+.os-product-description {
+  font-size: .75rem
+}
+
+.os-product-footer button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  border: none;
+  background-color: #7e72f2;
+  color: rgba(255, 255, 255, 1);
+  font-family: 'Montserrat', sans-serif;
+}
+
