--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,55 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+.wrapper {
+  margin: 100px auto;
+}
 
-/* put your styles in this file */
+.os-pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.os-pagination a {
+  line-height: 1;
+  text-decoration: none
+}
+
+.os-pagination .previous,
+.os-pagination .next {
+  color: #000
+}
+
+.previous {
+  margin-right: 15px;
+}
+
+.next {
+  margin-left: 15px;
+}
+
+.page-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.page-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #ededed;
+  border-radius: 20px;
+  color: rgba(44, 44, 44, 1);
+  transition: 0.3s;
+}
+
+.page-link.active,
+.page-link:hover {
+  color: rgba(255, 255, 255, 1);
+  background: rgba(126, 114, 242, 1);
+}
