add icons-fonts and search component

--- a/src/components/card-list/01-css-task/index.html
+++ b/src/components/card-list/01-css-task/index.html
@@ -14,12 +14,12 @@
       <div class="row">
         <div class="col-12 col-m-6 col-l-4">
           <div class="product">
-            <img src="/Eleks-study/online-store/img/Rectangle.png" class="product__image" alt="Photo">
+            <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="/Eleks-study/online-store/icons/Star 1.png" class="product__star" alt="Star">
+                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -32,12 +32,12 @@
 
         <div class="col-12 col-m-6 col-l-4">
           <div class="product">
-            <img src="/Eleks-study/online-store/img/Rectangle.png" class="product__image" alt="Photo">
+            <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="/Eleks-study/online-store/icons/Star 1.png" class="product__star" alt="Star">
+                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -50,12 +50,12 @@
 
         <div class="col-12 col-m-6 col-l-4">
           <div class="product">
-            <img src="/Eleks-study/online-store/img/Rectangle.png" class="product__image" alt="Photo">
+            <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="/Eleks-study/online-store/icons/Star 1.png" class="product__star" alt="Star">
+                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -68,12 +68,12 @@
 
         <div class="col-12 col-m-6 col-l-4">
           <div class="product">
-            <img src="/Eleks-study/online-store/img/Rectangle.png" class="product__image" alt="Photo">
+            <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="/Eleks-study/online-store/icons/Star 1.png" class="product__star" alt="Star">
+                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -86,12 +86,12 @@
 
         <div class="col-12 col-m-6 col-l-4">
           <div class="product">
-            <img src="/Eleks-study/online-store/img/Rectangle.png" class="product__image" alt="Photo">
+            <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="/Eleks-study/online-store/icons/Star 1.png" class="product__star" alt="Star">
+                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
                 </div>
                 <div class="product__price">15999</div>
               </div>
