--- a/src/components/card/01-css-task/css/style.css
+++ b/src/components/card/01-css-task/css/style.css
@@ -7,7 +7,6 @@
   max-width: 317px;
   height: 394px;
   padding-top: 12px;
-  background: #FFFFFF;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
 }
@@ -59,8 +58,7 @@
 }
 
 .button {
-  width: 317px;
-  height: 40px;
+  padding: 15px 115px;
   margin-top: 17px;
   text-align: center;
   font-size: 12px;
