--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -17,12 +17,12 @@
   <div class="wrapper">
     <!-- Card component -->
     <div class="product">
-      <img src="/Eleks-study/online-store/img/Rectangle.png" class="product__image" alt="Photo">
+      <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
       <div class="product__content">
         <div class="product__block-rating-and-price">
           <div class="product__rating">
             <div class="product__rating-count">1.23</div>
-            <img src="/Eleks-study/online-store/icons/Star 1.png" class="product__star" alt="Star">
+            <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
           </div>
           <div class="product__price">15999</div>
         </div>
