--- a/src/components/double-slider/index.html
+++ b/src/components/double-slider/index.html
@@ -17,22 +17,40 @@
 <body>
   <main>
     <div class="wrapper">
-      <div class="slider">
+      <div id="slider-wrapper-1" class="slider">
         <div class="slider__track"></div>
-        <input type="range" min="0" max="85000" value="0" id="slider-1" class="slider__thumb" oninput="slideOne()">
-        <input type="range" min="0" max="85000" value="85000" id="slider-2" class="slider__thumb slider__thumb_right" oninput="slideTwo()">
+        <input type="range" min="0" max="85000" value="0" class="slider__thumb slider-1">
+        <input type="range" min="0" max="85000" value="85000" class="slider__thumb slider__thumb_right slider-2">
         <div class="slider__values">
           <div class="slider__price-start">
-            <span id="range-1">
+            <span class="range-1">
               0
             </span>
             UAH
           </div>
           <div class="slider__price-end">
-            <span id="range-2">
+            <span class="range-2">
               85000
             </span>
             UAH
+          </div>
+        </div>
+      </div>
+
+      <div id="slider-wrapper-2" class="slider">
+        <div class="slider__track"></div>
+        <input type="range" min="0" max="5" value="0" step="0.01" class="slider__thumb slider-1">
+        <input type="range" min="0" max="5" value="5" step="0.01" class="slider__thumb slider__thumb_right slider-2">
+        <div class="slider__values">
+          <div class="slider__price-start">
+            <span class="range-1">
+              0
+            </span>
+          </div>
+          <div class="slider__price-end">
+            <span class="range-2">
+              5
+            </span>
           </div>
         </div>
       </div>
