added cart component

--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,11 +4,98 @@
   <meta charset="UTF-8" />
   <title>Cart component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
 <main>
   <div id="root">
     <!-- Cart component -->
+
+    <div class="cart-modal">
+      <div class="close-button-header">
+        <i class="bi bi-x"></i>
+      </div>
+      <div class="cart-content">
+        <div class="cart-items">
+          <ul class="cart-list">
+            <li class="item-row">
+              <div class="item-preview">
+                <img src="https://content2.rozetka.com.ua/goods/images/big/163399632.jpg" alt="Item preview">
+              </div>
+              <div class="item-name">
+                Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+              </div>
+              <div class="item-qty">
+                <button class="qty-counter">
+                  <i class="bi bi-dash-circle"></i>
+                </button>
+                <span>1</span>
+                <button class="qty-counter">
+                  <i class="bi bi-plus-circle"></i>
+                </button>
+              </div>
+              <div class="item-price">
+                16000
+              </div>
+            </li>
+            <li class="item-row">
+              <div class="item-preview">
+                <img src="https://content2.rozetka.com.ua/goods/images/big/163399632.jpg" alt="Item preview">
+              </div>
+              <div class="item-name">
+                Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+              </div>
+              <div class="item-qty">
+                <button class="qty-counter">
+                  <i class="bi bi-dash-circle"></i>
+                </button>
+                <span>1</span>
+                <button class="qty-counter">
+                  <i class="bi bi-plus-circle"></i>
+                </button>
+              </div>
+              <div class="item-price">
+                16000
+              </div>
+            </li>
+            <li class="item-row">
+              <div class="item-preview">
+                <img src="https://content2.rozetka.com.ua/goods/images/big/163399632.jpg" alt="Item preview">
+              </div>
+              <div class="item-name">
+                Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+              </div>
+              <div class="item-qty">
+                <button class="qty-counter">
+                  <i class="bi bi-dash-circle"></i>
+                </button>
+                <span>1</span>
+                <button class="qty-counter">
+                  <i class="bi bi-plus-circle"></i>
+                </button>
+              </div>
+              <div class="item-price">
+                16000
+              </div>
+            </li>
+
+          </ul>
+        </div>
+        <div class="footer">
+          <div class="cart-total">
+            Total:
+            <span>50000</span>
+          </div>
+          <div class="cart-order-btn">
+            <button class="order-btn">Order</button>
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
   </div>
 </main>
 </body>
