--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,116 @@
 /* put your styles in this file */
 /*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+
+:root {
+  --purple: #7e72f2;
+  --white-100: #ffffff;
+  --white-200: #fefefe;
+}
+
+
+.cart-modal {
+  width: 90%;
+  height: 90%;
+  background-color: var(--wite-100);
+  border-radius: 8px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  overflow-y: scroll;
+  z-index: 200;
+  position: fixed;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.close-button-header {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  height: 40px;
+  margin: 0 10px;
+}
+
+.close-button-header .bi {
+  cursor: pointer;
+  font-size: 30px;
+}
+
+.cart-content {
+  padding: 12px;
+}
+
+.cart-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.item-row {
+  padding: 15px;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: var(--wite-100);
+  border-radius: 3px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+}
+
+.item-preview {
+  width: 54px;
+  height: 40px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.item-preview img {
+  width: 100%;
+}
+
+.item-preview, .item-name, .item-qty, .item-price {
+  padding: 0 10px;
+}
+
+.qty-counter {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  height: 30px;
+  outline: none;
+  width: 30px;
+}
+
+.itep-price {
+  min-width: 100px;
+}
+
+.item-row, .cart-total {
+  font-size: 14px;
+  font-family: inherit;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.cart-total {
+  padding: 10px;
+}
+
+.order-btn {
+  border: none;
+  background-color: var(--purple);
+  color: var(--white-100);
+  text-transform: uppercase;
+  font-size: 13px;
+  width: 200px;
+  padding: 8px 12px;
+  border-radius: 3px;
+  font-family: inherit;
+  cursor: pointer;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+}
