--- a/components/card/style.css
+++ b/components/card/style.css
@@ -17,10 +17,8 @@ a {
 
 .card-component {
   width: 317px;
-  height: 394px;
   margin-left: 5%;
   margin-top: 5%;
-  box-sizing: border-box;
   box-shadow: 0px 0px 14px #cccccc;
   border-radius: 10px;
 }
@@ -40,30 +38,19 @@ a {
   color: white;
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
-  align-items: baseline;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.card-button-small-icon {
-  width: 14px;
-  height: 13px;
-  align-items: baseline;
-  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .card-photo {
   padding: 10px;
-  box-sizing: border-box;
 }
 
 .card-text-price {
-  justify-content: right;
   float: right;
-  margin-right: 22px;
   margin-top: 16px;
   margin-right: 22px;
-  margin-bottom: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
