add filter-list and replace icon-star on icon-font

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -5,6 +5,7 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../../../fonts.css">
   <style>
     .wrapper {
       width: 400px;
@@ -22,7 +23,7 @@
         <div class="product__block-rating-and-price">
           <div class="product__rating">
             <div class="product__rating-count">1.23</div>
-            <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
+            <i class="icon icon-star"></i>
           </div>
           <div class="product__price">15999</div>
         </div>
