--- a/src/components/card-list/01-css-task/index.html
+++ b/src/components/card-list/01-css-task/index.html
@@ -7,6 +7,7 @@
   <title>Card-list</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../../../fonts.css">
 </head>
 <body>
   <div class="card-list-wrapper">
@@ -19,7 +20,7 @@
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
+                  <i class="icon icon-star"></i>
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -37,7 +38,7 @@
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
+                  <i class="icon icon-star"></i>
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -55,7 +56,7 @@
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
+                  <i class="icon icon-star"></i>
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -73,7 +74,7 @@
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
+                  <i class="icon icon-star"></i>
                 </div>
                 <div class="product__price">15999</div>
               </div>
@@ -91,7 +92,7 @@
               <div class="product__block-rating-and-price">
                 <div class="product__rating">
                   <div class="product__rating-count">1.23</div>
-                  <img src="../../../icons/Star 1.png" class="product__star" alt="Star">
+                  <i class="icon icon-star"></i>
                 </div>
                 <div class="product__price">15999</div>
               </div>
